--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>homeWork_js_7</title>
 </head>
 <body>
+<ul id="list">
 
+</ul>
 <script src="scripts/common.js"></script>
 </body>
 </html>
